<resources>
    <string name="app_name">Приложение</string>
    <string name="sign_in">Войти</string>
    <string name="or">or</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="sign_out">Выйти</string>
    <string name="you_are_signed_in">Вы авторизованы</string>
    <string name="mail_example">Почта: test@mail.ru</string>
    <string name="first_name">Имя: Радмир</string>
    <string name="second_name">Фамилия: Салимов</string>
    <string name="image">это фото</string>
</resources>